force-app/main/default/objects/Funding_Award_Non_User_Participant__c/Funding_Award_Non_User_Participant__c.object-meta.xml
<CustomObject>
    <description>Custom junction object to allow multiple contacts and accounts to be associated  with multiple awards without requiring a user as is the case on the standard Funding Award Participant object</description>
    <label>Funding Award Non-User Participant</label>
    <nameField>
        <displayFormat>FANUP-{00000}</displayFormat>
        <label>Funding Award Non-User Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Non-User Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>