force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/ABS_RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>ABS_RAG_Status__c</fullName>
    <formula>TEXT(Related_Account__r.ABS_Traffic_Light__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABS RAG Status</label>
    <type>Text</type>
</CustomField>