force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Related_Account__r.BillingStreet +&quot; &quot;+ Related_Account__r.BillingCity +&quot; &quot;+  Related_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>