force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <description>Describes the role thus participant has in the award process</description>
    <label>Participant Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant Recipient Lead</fullName>
            </value>
            <value>
                <fullName>Consortium Member</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Installer Property</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>