force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Award Non-User Participants</relationshipLabel>
    <relationshipName>Funding_Award_Non_User_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>