force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/Related_Fraud_or_Error__c.field-meta.xml
<CustomField>
    <fullName>Related_Fraud_or_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fraud or Error</label>
    <referenceTo>Fraud_Error__c</referenceTo>
    <relationshipLabel>Installer / Supplier Name</relationshipLabel>
    <relationshipName>Funding_Award_Non_User_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>