force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/Related_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Property</label>
    <referenceTo>FundingPropertyDetail__c</referenceTo>
    <relationshipLabel>Installers</relationshipLabel>
    <relationshipName>Funding_Award_Non_User_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>