force-app/main/default/objects/Funding_Award_Non_User_Participant__c/fields/Trustmark_Business_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_Business_License_Number__c</fullName>
    <formula>Related_Account__r.Trustmark_Business_License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trustmark Business License Number</label>
    <type>Text</type>
</CustomField>