force-app/main/default/objects/Funding_Award_Non_User_Participant__c/recordTypes/Grantmaking.recordType-meta.xml
<RecordType>
    <fullName>Grantmaking</fullName>
    <active>true</active>
    <label>Grantmaking</label>
</RecordType>