force-app/main/default/objects/Funding_Award_Non_User_Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Participant_Role__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>